--- a/style.css
+++ b/style.css
@@ -223,3 +223,65 @@ footer {
   text-align: center;
   margin-top: 32px;
 }
+
+/* media query */
+/* min, max, <>  */
+
+/* ipad view 992px */
+
+/* @media (max-width: 992px) */
+@media (width<992px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .articles {
+    width: 100%;
+  }
+
+  .side-links {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+  }
+
+  .side-links > div {
+    flex-grow: 1;
+  }
+
+  /* .btn {
+    width: 100%;
+  } */
+}
+
+/* phones 550px */
+/* @media (width<550px) {
+} */
+@media (max-width: 550px) {
+  article {
+    display: flex;
+    flex-direction: column;
+  }
+
+  article .art-img {
+    width: 100%;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .side-links {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+  }
+}
